<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".activities.CalculadoraActivity">

    <TextView
        android:id="@+id/textview_lcd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/textview_inicio"
        android:textAlignment="textEnd"
        android:textSize="40sp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_c"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_lcd"
        android:layout_margin="2dp"
        android:text="@string/btn_c"
        android:textAllCaps="true"
        android:textColor="#F44336"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_potencia"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_lcd"
        android:layout_margin="2dp"
        android:text="@string/btn_potencia"
        android:layout_toRightOf="@+id/button_ce"
        android:textAllCaps="true"
        android:textSize="40sp"
        android:textStyle="bold"
    />


    <Button
        android:id="@+id/button_ce"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_lcd"
        android:layout_margin="2dp"
        android:text="@string/btn_ce"
        android:layout_toRightOf="@+id/button_c"
        android:textAllCaps="true"
        android:textColor="#F44336"
        android:textSize="40sp"
        android:textStyle="bold"
    />

    <Button
        android:id="@+id/button_divisao"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_lcd"
        android:layout_alignStart="@id/button_multiplicacao"
        android:layout_margin="2dp"
        android:text="@string/btn_divisao"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_sete"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_c"
        android:layout_alignParentLeft="true"
        android:layout_margin="2dp"
        android:text="@string/btn_sete"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_oito"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_sete"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/button_sete"
        android:text="@string/btn_oito"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_nove"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_sete"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/button_oito"
        android:text="@string/btn_nove"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_multiplicacao"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_divisao"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/button_nove"
        android:text="@string/btn_multiplicacao"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_quatro"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_sete"
        android:layout_alignParentLeft="true"
        android:layout_margin="2dp"
        android:text="@string/btn_quatro"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_cinco"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_oito"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/button_quatro"
        android:text="@string/btn_cinco"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_seis"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_nove"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/button_cinco"
        android:text="@string/btn_seis"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_subtracao"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_multiplicacao"
        android:layout_toRightOf="@id/button_seis"
        android:layout_margin="2dp"
        android:text="@string/btn_menos"
        android:textSize="40sp" />


    <Button
        android:id="@+id/button_um"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_quatro"
        android:layout_alignParentLeft="true"
        android:layout_margin="2dp"
        android:text="@string/btn_um"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_dois"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_cinco"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/button_um"
        android:text="@string/btn_dois"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_tres"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_seis"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/button_dois"
        android:text="@string/btn_tres"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_adicao"
        android:layout_width="90dp"
        android:layout_height="150dp"
        android:layout_below="@+id/button_subtracao"
        android:layout_toRightOf="@id/button_tres"
        android:layout_margin="2dp"
        android:text="@string/btn_mais"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_um"
        android:layout_alignParentLeft="true"
        android:layout_margin="2dp"
        android:text="@string/btn_zero"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_ponto"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_dois"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/button_zero"
        android:text="@string/btn_ponto"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_igual"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_tres"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/button_ponto"
        android:text="@string/btn_igual"
        android:textSize="40sp" />


</RelativeLayout>